# graphics-breakdown

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  plan.org
include/: Violet.hpp  vgepch.hpp
include/Violet/: Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  InputCodes.hpp  Layer.hpp  LayerStack.hpp  Violet.hpp  Window.hpp
include/Violet/Core/: Timestep.hpp
include/Violet/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
include/Violet/ImGui/: ImguiLayer.hpp
include/Violet/Platform/Linux/: LinuxInput.hpp  LinuxWindow.hpp
include/Violet/Platform/OpenGL/: ImguiOpenGLRenderer.hpp  OpenGLBuffer.hpp  OpenGLContext.hpp  OpenGLRenderAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLVertexArray.hpp
include/Violet/Renderer/: Buffer.hpp  Camera.hpp  GraphicsContext.hpp  RenderCommand.hpp  Renderer.hpp  RendererAPI.hpp  RenderingContext.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt
src/: CMakeLists.txt  Violet.hpp  vgepch.hpp
src/Violet/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Layer.cpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Window.hpp
src/Violet/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
src/Violet/ImGui/: ImguiBuild.cpp  ImguiLayer.cpp  ImguiLayer.hpp
src/Violet/Platform/Linux/: LinuxInput.cpp  LinuxWindow.cpp  LinuxWindow.hpp
src/Violet/Platform/OpenGL/: ImguiOpenGLRenderer.cpp  ImguiOpenGLRenderer.hpp  OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLRenderAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
src/Violet/Renderer/: ;  Buffer.cpp  Camera.cpp  OpenGLContext.cpp  OpenGLRendererAPI.cpp  RenderCommand.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
test/: CMakeLists.txt  FallingSand.cpp  Sandbox.cpp
test/assets/shaders/: color.glsl  sand_world.glsl
test/assets/textures/: pattern.png.1~
